[package]
name = "apcoabot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.29"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
